--- a/index.html
+++ b/index.html
@@ -5,8 +5,190 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+        h1 {
+            font-size: 100px;
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg fixed-top  bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     <h1>Hello from Bootstrap</h1>
+    <button class="btn btn-primary">Button</button>
+    <button class="btn btn-secondary">Button</button>
+    <button class="btn btn-success">Button</button>
+    <button class="btn btn-danger">Button</button>
+
+    <p class="text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nostrum dolor perferendis molestiae, laboriosam nesciunt voluptate animi et quam. Laudantium.</p>
+    <p class="text-danger">Magni quisquam cumque exercitationem iure tenetur impedit dolorem nesciunt doloribus, illum incidunt beatae dolore. Reprehenderit cumque asperiores nam exercitationem voluptatibus.</p>
+
+    <div class="bg-primary text-white">
+        <h1>My Dream</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quaerat, odio veritatis debitis suscipit ullam. Neque, natus quod. Quae, dolores?</p>
+    </div>
+    <div class="bg-secondary text-white">
+        <h1>My Hobby</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique quod dolore magni eveniet minus consequuntur velit ea voluptatum tempora assumenda.</p>
+    </div>
+
+    <div>
+        <img class="img-fluid w-25 rounded-circle img-thumbnail" src="nature.jpeg" alt="">
+        <img class="img-fluid w-25 rounded-circle " src="house.jpeg" alt="">
+        <img class="img-fluid w-25 rounded-circle " src="house1.jpeg" alt="">
+    </div>
+
+    <h1>Card</h1>
+    
+    <div class="card" style="width: 18rem;">
+        <img src="house.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+
+
+    <h1>3 cards</h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="nature.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="nature.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="nature.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h1>Navigation Bar</h1>
+      <nav class="nav">
+        <a class = "nav-link" href="">Home</a>
+        <a class = "nav-link" href="">Insert</a>
+        <a class = "nav-link" href="">Sign Up</a>
+        <a class = "nav-link" href="">Log In</a>
+      </nav>
+
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
+
+      <div class="container">
+        <h1>Grid</h1>
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, voluptatibus? Assumenda quia doloremque vero. Suscipit eligendi in quibusdam quos animi aliquid, dolores ipsam inventore dolorum libero quia qui modi quod illo, reiciendis blanditiis consequuntur iste. Quibusdam eius reiciendis necessitatibus nam exercitationem enim quaerat magni quae, at nobis libero! Suscipit debitis dolore sunt deleniti tempora vel quae vitae, corrupti voluptatem officia? Autem, sapiente officia temporibus quae magnam et delectus minima, omnis adipisci voluptatum ipsam voluptate totam? Mollitia molestias tempora autem perspiciatis, fuga voluptatibus dolore consequatur a ratione ducimus optio eos quisquam repudiandae commodi harum unde soluta? Beatae reprehenderit debitis voluptatem obcaecati!</p>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, voluptatibus? Assumenda quia doloremque vero. Suscipit eligendi in quibusdam quos animi aliquid, dolores ipsam inventore dolorum libero quia qui modi quod illo, reiciendis blanditiis consequuntur iste. Quibusdam eius reiciendis necessitatibus nam exercitationem enim quaerat magni quae, at nobis libero! Suscipit debitis dolore sunt deleniti tempora vel quae vitae, corrupti voluptatem officia? Autem, sapiente officia temporibus quae magnam et delectus minima, omnis adipisci voluptatum ipsam voluptate totam? Mollitia molestias tempora autem perspiciatis, fuga voluptatibus dolore consequatur a ratione ducimus optio eos quisquam repudiandae commodi harum unde soluta? Beatae reprehenderit debitis voluptatem obcaecati!</p>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, voluptatibus? Assumenda quia doloremque vero. Suscipit eligendi in quibusdam quos animi aliquid, dolores ipsam inventore dolorum libero quia qui modi quod illo, reiciendis blanditiis consequuntur iste. Quibusdam eius reiciendis necessitatibus nam exercitationem enim quaerat magni quae, at nobis libero! Suscipit debitis dolore sunt deleniti tempora vel quae vitae, corrupti voluptatem officia? Autem, sapiente officia temporibus quae magnam et delectus minima, omnis adipisci voluptatum ipsam voluptate totam? Mollitia molestias tempora autem perspiciatis, fuga voluptatibus dolore consequatur a ratione ducimus optio eos quisquam repudiandae commodi harum unde soluta? Beatae reprehenderit debitis voluptatem obcaecati!</p>
+            </div>
+        </div>
+      </div>
+
+      <h1>Carousel</h1>
+      <div class="container">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="goku1.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="naruto.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="yoriichi.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+
 </body>
 </html>
