--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <style>
         h1 {
             font-size: 100px;
+            padding-top: 100px;
+        }
+        .colr {
+            background-color: lightgreen;
+            color: darkolivegreen;
+            font-size: 30px;
+        }
+        .distance .colr {
+            padding : 20px;
+            margin: 10px;
         }
     </style>
 </head>
@@ -48,11 +58,14 @@
           </div>
         </div>
       </nav>
+    
+      <div class="container">  
     <h1>Hello from Bootstrap</h1>
     <button class="btn btn-primary">Button</button>
     <button class="btn btn-secondary">Button</button>
     <button class="btn btn-success">Button</button>
     <button class="btn btn-danger">Button</button>
+    
 
     <p class="text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nostrum dolor perferendis molestiae, laboriosam nesciunt voluptate animi et quam. Laudantium.</p>
     <p class="text-danger">Magni quisquam cumque exercitationem iure tenetur impedit dolorem nesciunt doloribus, illum incidunt beatae dolore. Reprehenderit cumque asperiores nam exercitationem voluptatibus.</p>
@@ -167,7 +180,7 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="goku1.jpeg" class="d-block w-100" alt="...">
+            <img src="goku.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="naruto.jpeg" class="d-block w-100" alt="...">
@@ -185,6 +198,15 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
+
+    <div class="container">
+        <h1>Flex Layout</h1>
+        <div  class="d-flex flex-row flex-md-row flex-sm-column flex-lg-row distance">
+            <div class="colr">Goku</div>
+            <div class="colr">Naruto</div>
+            <div class="colr">Tanjiro</div>
+        </div>
     </div>
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
